--- a/client-components/bricks/media-client-select.html
+++ b/client-components/bricks/media-client-select.html
@@ -3,7 +3,7 @@
     {
         state =
         {
-            set_id_field_callback: _ => void 0,
+            set_id_field_callback: id => this.dispatchEvent(new CustomEvent("set-id-field-callback", { detail: { id } })),
             search_keywords: '',
             page_num: 1,
             total_items: 0,
