--- a/client-components/bricks/edit-course-form.html
+++ b/client-components/bricks/edit-course-form.html
@@ -12,6 +12,7 @@
             certificate_text: '',
             min_points_required: 1,
             is_visible: 1,
+            is_external: 0,
             members_only: 0,
             
             categoriesAvailable: [],
@@ -231,6 +232,9 @@
     <form @submit="submit">
         <ext-label label="Visível (publicado)" reverse="1">
             <input type="checkbox" name="is_visible" value="1" @change="changeField" :checked="Boolean(Number(state.is_visible))" />
+        </ext-label>
+        <ext-label label="Externo (realizado em outra plataforma)" reverse="1">
+            <input type="checkbox" name="is_external" value="1" @change="changeField" :checked="Boolean(Number(state.is_external))" />
         </ext-label>
         <ext-label label="Exclusivo para associados" reverse="1">
             <input type="checkbox" name="members_only" value="1" @change="changeField" :checked="Boolean(Number(state.members_only))" />
