--- a/client-components/bricks/ext-label.html
+++ b/client-components/bricks/ext-label.html
@@ -17,11 +17,11 @@
     <label class="flex m-2 ${state.linebreak ? 'flex-col' : 'flex-row items-center'}">
             <span :if="!state.reverse" class="shrink mr-2 text-base ${state.labelbold ? 'font-bold' : ''}">${state.label}: </span>
             <span :if="!state.reverse" class="grow text-base flex flex-row flex-wrap">
-                <slot class="inline-block w-full" id="${state.slotId}"></slot>
+                <slot class="inline-block w-full"></slot>
             </span>
 
             <span :if="state.reverse" class="text-base">
-                <slot class="inline-block w-full" id="${state.slotId}"></slot>
+                <slot class="inline-block w-full"></slot>
             </span>
             <span :if="state.reverse" class="ml-2 text-base ${state.labelbold ? 'font-bold' : ''}"> ${state.label}</span>
     </label>
