Recurso de questionários implementado

--- a/client-components/bricks/delete-entity-form-rpc.html
+++ b/client-components/bricks/delete-entity-form-rpc.html
@@ -13,7 +13,7 @@
         {
             e.preventDefault();
 
-            import(Parlaflix.functionUrl(this.state.functionsurl))
+            import(this.state.functionsurl)
             .then(mod => mod[this.state.deletefnname]())
             .then(Parlaflix.Alerts.pushFromJsonResult)
             .then(Parlaflix.Helpers.URLGenerator.goToPageOnSuccess(this.state.gobacktourl, {}))
