--- a/client-components/bricks/student-change-data-form.html
+++ b/client-components/bricks/student-change-data-form.html
@@ -16,7 +16,9 @@
             lgpdTermText: '',
             studentid: 0,
             currpassword: '',
-            slotId: ''
+            slotId: '',
+
+            darkMode: false
         }
 
         changeField(e)
@@ -29,7 +31,7 @@
 
         showLgpd()
         {
-            document.getElementById('lgpdTermDialog')?.showModal();
+            this.shadowRoot.getElementById('lgpdTermDialog')?.showModal();
         }
 
         submit(e)
@@ -63,11 +65,20 @@
             })
             .catch(reason => Parlaflix.Alerts.push(Parlaflix.Alerts.types.error, String(reason)));
         }
+
+        connected()
+        {
+            const document = window.document.documentElement;
+            if (document && document.classList.contains('dark'))
+                this.render({ darkMode: true });
+
+            document.addEventListener('dark-mode-toggle', e => this.render({ darkMode: e.detail.dark ?? false }));
+        }
     }
 </script>
 
 <template>
-    <form class="mx-auto max-w-[700px]" @submit="submit">
+    <form class="mx-auto max-w-[700px] ${state.darkMode ? 'dark' : ''}" @submit="submit">
         <ext-label label="Nome completo">
             <input type="text" required class="w-full" maxlength="140" name="fullname" :value="state.fullname" @input="changeField"/>
         </ext-label>
@@ -113,7 +124,7 @@
             <button class="btn" type="submit">Alterar dados</button>
         </div>
     </form>
-    <dialog id="lgpdTermDialog" class="md:w-[700px] w-screen h-screen backdrop:bg-gray-700/60 p-4 bg-neutral-100 dark:bg-neutral-800">
+    <dialog id="lgpdTermDialog" class="md:w-[700px] w-screen h-screen m-auto backdrop:bg-gray-700/60 p-4 ${state.darkMode ? 'bg-neutral-800' : 'bg-neutral-100'}">
         <form id="lgpdTermForm" method="dialog">
             <slot id="${state.slotId}"></slot>
             <div class="text-center my-4">
