--- a/client-components/bricks/student-lesson-password-submitter.html
+++ b/client-components/bricks/student-lesson-password-submitter.html
@@ -41,17 +41,22 @@
 
         connected()
         {
-            this.state.is_correct = Boolean(Number(this.getAttribute('iscorrect') ?? 0));
+            this.render({ ...this.state, is_correct: Boolean(Number(this.getAttribute('iscorrect') ?? 0)) });
         }
     }
 </script>
 
 <template>
     <form :if="!state.is_correct" @submit="submit">
-        <ext-label label="Senha desta aula">
+        <ext-label label="Senha">
             <input type="text" name="given_password" :value="state.given_password" @input="changeField" required class="w-[calc(100%-120px)] mr-2" maxlength="100" />
             <button type="submit" class="btn">Validar</button>
         </ext-label>
     </form>
-    <p :if="state.is_correct">Você já marcou presença/visualização desta aula.</p>
+    <ext-label :if="state.is_correct" label="Senha">
+        <span class="italic">
+            <img class="inline mr-2" src="${Parlaflix.Helpers.URLGenerator.generateFileUrl('/assets/pics/check.png')}" width="32" />
+            Você já inseriu a senha correta
+        </span>
+    </ext-label>
 </template>
