Método connected() dos web components corrigido para usar this.render()

--- a/client-components/bricks/certificate-auth-form.html
+++ b/client-components/bricks/certificate-auth-form.html
@@ -45,7 +45,7 @@
 
         connected()
         {
-            this.state = { ...this.state, code: this.getAttribute("code") ?? null, date: this.getAttribute("date") ?? null, time: this.getAttribute("time") ?? null };
+            this.render({ code: this.getAttribute("code") ?? null, date: this.getAttribute("date") ?? null, time: this.getAttribute("time") ?? null });
                     
             if (this.state.code && this.state.date && this.state.time)
                 this.onSubmit(undefined);
