--- a/client-components/bricks/mark-student-presence.html
+++ b/client-components/bricks/mark-student-presence.html
@@ -49,11 +49,10 @@
 
         connected()
         {
-            this.state = { 
-                ...this.state, 
+            this.render({ 
                 availableSubscriptions: JSON.parse(this.getAttribute("available_subscriptions") || '[]'),
                 lessonId: Number.parseInt(this.getAttribute("lesson_id"))
-            };
+            });
         }
     }
 </script>
