--- a/client-components/bricks/send-subscribers-email.html
+++ b/client-components/bricks/send-subscribers-email.html
@@ -92,7 +92,7 @@
         connected()
         {
             const avDests = JSON.parse(this.getAttribute("availableDestinationsJson") ?? '[]');
-            this.state = { ...this.state, availableDestinations: avDests, setDestinations: avDests.map((_, idx) => idx) };
+            this.render({ ...this.state, availableDestinations: avDests, setDestinations: avDests.map((_, idx) => idx) });
         }
     }
 </script>
